--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                 <input type="checkbox" />
                 <input type="color" /> Color 5
             </div>
-            <button id="ch-color" onclick="changeColors()">Change color</button>
+            <input type="text" placeholder="Google fonts link (standard)" /><br />
+            <button id="ch-color" onclick="changeColors();changeFont()">Change color</button>
         </div>
         
         <nav>
